--- a/Scheduler.Web/clientapp/src/css/Schedule.css
+++ b/Scheduler.Web/clientapp/src/css/Schedule.css
@@ -38,9 +38,16 @@
 
 .time-slot {
     position: relative;
-    height: 60px; /* 1 hour = 60px */
+    height: 60px;
     border-top: 1px solid #ddd;
     font-size: 10px;
     text-align: center;
     color: #666;
+}
+
+.schedule-settings {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
 }
